code has been fixed